--- a/public/index.html
+++ b/public/index.html
@@ -24,7 +24,7 @@
     -->
     <link href="https://fonts.googleapis.com/css2?family=Inter:wght@100;200;300;400;500;600;700;800;900&display=swap" rel="stylesheet">
   </head>
-  <body>
+  <body style="background-color: #F0ECE3">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
     <!--
